--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,9 @@
     "eject": "react-scripts eject",
     "docz": "docz dev",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "cosmos": "cosmos",
+    "styleguidist": "styleguidist server"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^4.0.0-alpha.23",
@@ -27,6 +29,8 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-runtime": "^6.26.0"
+    "babel-runtime": "^6.26.0",
+    "react-cosmos": "^4.6.4",
+    "react-styleguidist": "^7.3.9"
   }
 }
